# f-stack-devenv

./: README.md  freebsd.md
docs/: freebsd-development.md  freebsd-sctp.md
vm/dpdk/: Vagrantfile  install-dpdk.sh  meson.build
vm/freebsd/: Vagrantfile  install.sh
vm/fstack/: Vagrantfile  install.sh
